--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 html {
   box-sizing: border-box;
 }
 body {
   margin: 0;
   min-height: 100vh;
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  background-color: whitesmoke;
+}
+
+h1 {
+  margin: 30px auto;
+  text-align: center;
+  font-size: 40px;
+  letter-spacing: 5px;
 }
